WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281403
Writing suggestions show in the wrong place when the text node contains leading non-visible whitespace
https://bugs.webkit.org/show_bug.cgi?id=281403
Summary
Writing suggestions show in the wrong place when the text node contains leadi...
Wenson Hsieh
Reported
2024-10-13 16:33:50 PDT
rdar://137237226
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-10-13 16:59:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35126
EWS
Comment 2
2024-10-13 19:36:19 PDT
Committed
285107@main
(18268bbc067d): <
https://commits.webkit.org/285107@main
> Reviewed commits have been landed. Closing PR #35126 and removing active labels.
EWS
Comment 3
2024-10-15 18:16:37 PDT
Committed
283286.288@safari-7620-branch
(cb805facb094): <
https://commits.webkit.org/283286.288@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2030 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug